[package]
name = "solarea"
version = "2.0.6"
description = "Solarea"
authors = ["Solarea Maintainers"]
repository = "https://github.com/"
license = "MIT"
edition = "2021"

[dependencies]
arrayref = "0.3.6"
solana-program = "1.6.2"

[dev-dependencies]
solana-bpf-loader-program = "1.6.2"
solana-sdk = "1.6.2"
solana_rbpf = "0.2"

[lib]
crate-type = ["cdylib", "lib"]
